Gallery was added

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <!-- Elfsight Google Reviews Script -->
+<script src="https://static.elfsight.com/platform/platform.js" async></script>
   </body>
 </html>
